--- a/app/rutas/referenciales/nacionalidad/templates/nacionalidad-index.html
+++ b/app/rutas/referenciales/nacionalidad/templates/nacionalidad-index.html
@@ -11,13 +11,13 @@ Nacionalidades
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-primary" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Nacionalidades</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -43,7 +43,7 @@ Nacionalidades
           <div class="modal-body">
             <div class="form-group">
               <input type="hidden" id="txtIdNacionalidad">
-              <label for="txtDescripcion">Descripción:</label>
+              <label for="txtDescripcion">Nacionalidad:</label>
               <input type="text" class="form-control" placeholder="Ingrese la nacionalidad" id="txtDescripcion">
             </div>
           </div>
@@ -51,7 +51,7 @@ Nacionalidades
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -81,8 +81,8 @@ Nacionalidades
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id_nacionalidad="${row.id_nacionalidad}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id_nacionalidad="${row.id_nacionalidad}">Eliminar</button>`
           }
         }
       ]
@@ -102,13 +102,13 @@ Nacionalidades
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
-      const idNacionalidad = $('#txtIdNacionalidad').val();
+      const id_nacionalidad = $('#txtIdNacionalidad').val();
       const nuevaDescripcion = $('#txtDescripcion').val();
       const tabla = $('#tbl').DataTable();
 
-      if(idNacionalidad) {
+      if(id_nacionalidad) {
         // update
-        fetch(`/api/v1/nacionalidades/${idNacionalidad}`, {
+        fetch(`/api/v1/nacionalidades/${id_nacionalidad}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
@@ -165,11 +165,11 @@ Nacionalidades
           //Swal.fire("Saved!", "", "success");
           $('#modalTitle').text("Editar nacionalidad");
 
-          const idNacionalidad = $(this).data('id');
-          $('#txtIdNacionalidad').val(idNacionalidad);
+          const id_nacionalidad = $(this).data('id_nacionalidad');
+          $('#txtIdNacionalidad').val(id_nacionalidad);
 
           // Necesitamos obtener la descripción del backend
-          fetch(`/api/v1/nacionalidades/${idNacionalidad}`, {
+          fetch(`/api/v1/nacionalidades/${id_nacionalidad}`, {
             method: 'GET',
             headers: {
               'Content-Type': 'application/json'
@@ -187,7 +187,7 @@ Nacionalidades
 
   const eliminar = () => {
     $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
-      const idNacionalidad = $(this).data('id');
+      const id_nacionalidad = $(this).data('id_nacionalidad');
       // Mostrar mensaje de confirmación usando sweetalert
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
@@ -196,7 +196,7 @@ Nacionalidades
         cancelButtonText: `No`
       }).then((result) => {
         if (result.isConfirmed) {
-          fetch(`/api/v1/nacionalidades/${idNacionalidad}`, {
+          fetch(`/api/v1/nacionalidades/${id_nacionalidad}`, {
             method: 'DELETE',
             headers: {
               'Content-Type': 'application/json'
