--- a/app/rutas/referenciales/persona/templates/persona-agregar.html
+++ b/app/rutas/referenciales/persona/templates/persona-agregar.html
@@ -1,27 +1,24 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-Formulario Agregar Persona
+Formulario Agregar
 {% endblock %}
 
 {% block contenido %}
-<form id="formAgregarPersona">
+<form action="/action_page.php">
     <div class="form-group">
-        <label for="txtNombre">Nombre:</label>
-        <input type="text" class="form-control" placeholder="Ingrese su nombre" id="txtNombre" required>
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" placeholder="Enter email" id="email">
     </div>
     <div class="form-group">
-        <label for="txtApellido">Apellido:</label>
-        <input type="text" class="form-control" placeholder="Ingrese su apellido" id="txtApellido" required>
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" placeholder="Enter password" id="pwd">
     </div>
-    <div class="form-group">
-        <label for="txtCedula">Cedula:</label>
-        <input type="text" class="form-control" placeholder="Ingrese sus numero de cedula" id="txtCedula" required>
+    <div class="form-group form-check">
+        <label class="form-check-label">
+            <input class="form-check-input" type="checkbox"> Remember me
+        </label>
     </div>
-    <div class="form-group">
-      <label for="TxtFechanac">Fecha de Nacimiento:</label>
-      <input type="date" class="form-control" id="Fechanac">
-    </div>
-    <button type="submit" class="btn btn-primary">Agregar</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
