--- a/app/rutas/gestionar_compras/registrar_pedido_compras/templates/pedidos-index.html
+++ b/app/rutas/gestionar_compras/registrar_pedido_compras/templates/pedidos-index.html
@@ -1,23 +1,25 @@
 {% extends 'base.html' %}
     
 {% block titulo %}
-Sexos
+Listar Pedido de Compras
 {% endblock %}
 
 {% block contenido %}
 <div class="container mt-4">
-    <h3>Listar Sexos</h3>
+    <h3>Listar Pedido de Compras</h3>
 
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-primary" id="btnAgregar">Agregar</button>
+        <a href="{{ url_for('pdcmod.pedidos_agregar') }}" target="_blank" class="btn btn-primary">Agregar</a>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Código</th>
+              <th>Solicitante</th>
+              <th>Estado</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -26,37 +28,6 @@ Sexos
       </div>
     </div>
     <!-- /tarjeta -->
-
-    <!-- El formulario -->
-    <div class="modal" id="modalFormulario">
-      <!-- La clase modal-dialog-centered centra el modal -->
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <h4 class="modal-title" id="modalTitle"></h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-          </div>
-
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="form-group">
-              <input type="hidden" id="txtIdSexo">
-              <label for="txtDescripcion">Descripción:</label>
-              <input type="text" class="form-control" placeholder="Ingrese el sexo de la persona" id="txtDescripcion">
-            </div>
-          </div>
-
-          <!-- Modal footer -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
-          </div>
-
-        </div>
-      </div>
-    </div>
 
     <div class="row mt-4 d-none" id="rowAlerta">
         <div class="col col-md-12">
@@ -77,12 +48,14 @@ Sexos
       language: {
         url: "{{ url_for('static', filename='vendor/datatables/es-ES.json') }}",
       },
-      ajax:'/api/v1/sexos',
+      ajax:'/api/v1/gestionar-compras/registrar-pedido-compras/pedidos',
       columns: [
-        { data: 'descripcion' },
+        { data: 'id_pedido_compra' },
+        { data: 'empleado' },
+        { data: 'estado' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id_pedido_compra}">Modificar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-danger" data-id="${row.id_pedido_compra}">Anular</button>`
           }
         }
       ]
@@ -91,24 +64,19 @@ Sexos
 
   const agregar = () => {
     $('#btnAgregar').on('click', function(){
-      // Setear un título a modal
-      $('#modalTitle').text("Agregar el sexo de la persona");
-      // inicia ventana modal
-      $('#txtIdSexo').val("");
-      $('#txtDescripcion').val("");
-      $('#modalFormulario').modal();
+
     });
   }
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
-      const idSexo = $('#txtIdSexo').val();
+      const idCiudad = $('#txtIdCiudad').val();
       const nuevaDescripcion = $('#txtDescripcion').val();
       const tabla = $('#tbl').DataTable();
 
-      if(idSexo) {
+      if(idCiudad) {
         // update
-        fetch(`/api/v1/sexos/${idSexo}`, {
+        fetch(`/api/v1/ciudades/${idCiudad}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
@@ -118,17 +86,17 @@ Sexos
         .then(data => {
           if(data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El sexo de la persona ha sido actualizada correctamente.", "success");
+            Swal.fire("Actualizado", "La ciudad ha sido actualizada correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
         }).catch(err => {
           console.error(err);
-          Swal.fire("Error", "Ocurrió un error al actualizar el sexo.", "error");
+          Swal.fire("Error", "Ocurrió un error al actualizar la ciudad.", "error");
         });
       } else {
         // insert
-        fetch(`/api/v1/sexos`, {
+        fetch(`/api/v1/ciudades`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -138,13 +106,13 @@ Sexos
         .then(data => {
           if(data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El sexo de la persona ha sido agregada correctamente.", "success");
+            Swal.fire("Actualizado", "La ciudad ha sido agregada correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
         }).catch(err => {
           console.error(err);
-          Swal.fire("Error", "Ocurrió un error al guardar el sexo.", "error");
+          Swal.fire("Error", "Ocurrió un error al guardar la ciudad.", "error");
         });
       }
       $('#txtDescripcion').val("");
@@ -163,13 +131,13 @@ Sexos
       }).then((result) => {
         if (result.isConfirmed) {
           //Swal.fire("Saved!", "", "success");
-          $('#modalTitle').text("Editar sexo de la persona");
+          $('#modalTitle').text("Editar una Ciudad");
 
-          const idSexo = $(this).data('id');
-          $('#txtIdSexo').val(idSexo);
+          const idCiudad = $(this).data('id');
+          $('#txtIdCiudad').val(idCiudad);
 
           // Necesitamos obtener la descripción del backend
-          fetch(`/api/v1/sexos/${idSexo}`, {
+          fetch(`/api/v1/ciudades/${idCiudad}`, {
             method: 'GET',
             headers: {
               'Content-Type': 'application/json'
@@ -187,7 +155,7 @@ Sexos
 
   const eliminar = () => {
     $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
-      const idSexo = $(this).data('id');
+      const idCiudad = $(this).data('id');
       // Mostrar mensaje de confirmación usando sweetalert
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
@@ -196,7 +164,7 @@ Sexos
         cancelButtonText: `No`
       }).then((result) => {
         if (result.isConfirmed) {
-          fetch(`/api/v1/sexos/${idSexo}`, {
+          fetch(`/api/v1/ciudades/${idCiudad}`, {
             method: 'DELETE',
             headers: {
               'Content-Type': 'application/json'
@@ -214,7 +182,7 @@ Sexos
               Swal.fire(data.error);
             }
           }).catch(err => {
-            Swal.fire("Error", "Ocurrió un error al eliminar el sexo.", "error");
+            Swal.fire("Error", "Ocurrió un error al eliminar la ciudad.", "error");
           });
         }
       });
@@ -224,9 +192,9 @@ Sexos
 
   const addEvents = () => {
     agregar();
-    guardar();
-    editar();
-    eliminar();
+    //guardar();
+    //editar();
+    //eliminar();
   }
 
   $(function() {
