--- a/app/rutas/referenciales/ciudad/templates/ciudad-index.html
+++ b/app/rutas/referenciales/ciudad/templates/ciudad-index.html
@@ -11,13 +11,13 @@ Ciudades
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-success" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Ciudades</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -43,15 +43,15 @@ Ciudades
           <div class="modal-body">
             <div class="form-group">
               <input type="hidden" id="txtIdCiudad">
-              <label for="txtDescripcion">Descripción:</label>
+              <label for="txtDescripcion">Ciudad:</label>
               <input type="text" class="form-control" placeholder="Ingrese alguna ciudad" id="txtDescripcion">
             </div>
           </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline-success" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-outline-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -81,8 +81,8 @@ Ciudades
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id_ciudad="${row.id_ciudad}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id_ciudad="${row.id_ciudad}">Eliminar</button>`
           }
         }
       ]
@@ -102,13 +102,13 @@ Ciudades
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
-      const idCiudad = $('#txtIdCiudad').val();
+      const id_ciudad = $('#txtIdCiudad').val();
       const nuevaDescripcion = $('#txtDescripcion').val();
       const tabla = $('#tbl').DataTable();
 
-      if(idCiudad) {
+      if(id_ciudad) {
         // update
-        fetch(`/api/v1/ciudades/${idCiudad}`, {
+        fetch(`/api/v1/ciudades/${id_ciudad}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
@@ -153,41 +153,40 @@ Ciudades
   }
 
   const editar = () => {
-    $('#tbl').on('click', 'button[name="btn_editar"]',function(){
-      // Mostrar mensaje de confirmación usando sweetalert
-      Swal.fire({
-        title: "¿Deseas editar este registro?",
-        showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
-      }).then((result) => {
-        if (result.isConfirmed) {
-          //Swal.fire("Saved!", "", "success");
-          $('#modalTitle').text("Editar una Ciudad");
+    $('#tbl').on('click', 'button[name="btn_editar"]', function() {
+        // Mostrar mensaje de confirmación usando sweetalert
+        Swal.fire({
+            title: "¿Deseas editar este registro?",
+            showCancelButton: true,
+            confirmButtonText: "Si",
+            cancelButtonText: `No`
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $('#modalTitle').text("Editar una Ciudad");
 
-          const idCiudad = $(this).data('id');
-          $('#txtIdCiudad').val(idCiudad);
+                const id_ciudad = $(this).data('id_ciudad');
+                $('#txtIdCiudad').val(id_ciudad);
 
-          // Necesitamos obtener la descripción del backend
-          fetch(`/api/v1/ciudades/${idCiudad}`, {
-            method: 'GET',
-            headers: {
-              'Content-Type': 'application/json'
+                // Necesitamos obtener la descripción del backend
+                fetch(`/api/v1/ciudades/${id_ciudad}`, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                .then(resp => resp.json())
+                .then(data => {
+                    $('#txtDescripcion').val(data.data.descripcion); // Asegúrate que aquí accedes a la propiedad correcta
+                    $('#modalFormulario').modal();
+                });
             }
-          })
-          .then(resp => resp.json())
-          .then(data => {
-            $('#txtDescripcion').val(data.data.descripcion);
-            $('#modalFormulario').modal();
-          });
-        }
-      });
+        });
     });
-  }
+  };
 
   const eliminar = () => {
     $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
-      const idCiudad = $(this).data('id');
+      const id_ciudad = $(this).data('id_ciudad');
       // Mostrar mensaje de confirmación usando sweetalert
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
@@ -196,7 +195,7 @@ Ciudades
         cancelButtonText: `No`
       }).then((result) => {
         if (result.isConfirmed) {
-          fetch(`/api/v1/ciudades/${idCiudad}`, {
+          fetch(`/api/v1/ciudades/${id_ciudad}`, {
             method: 'DELETE',
             headers: {
               'Content-Type': 'application/json'
@@ -206,7 +205,7 @@ Ciudades
           .then(data => {
             if(data && !data.error && data.success) {
               // Para borrar la fila del datatable(cliente)
-              const fila =$(this).closest('tr');
+              const fila = $(this).closest('tr');
               const tabla = $('#tbl').DataTable();
               tabla.row(fila).remove().draw();
               Swal.fire("Eliminado", "", data.success);
@@ -218,7 +217,6 @@ Ciudades
           });
         }
       });
-
     });
   }
 
