--- a/app/rutas/referenciales/dia/templates/dia-index.html
+++ b/app/rutas/referenciales/dia/templates/dia-index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-    
+
 {% block titulo %}
-Dias
+Dia de la Cita
 {% endblock %}
 
 {% block contenido %}
@@ -11,13 +11,13 @@ Dias
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-primary" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Dias</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -29,29 +29,35 @@ Dias
 
     <!-- El formulario -->
     <div class="modal" id="modalFormulario">
-      <!-- La clase modal-dialog-centered centra el modal -->
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
           <!-- Modal Header -->
           <div class="modal-header">
             <h4 class="modal-title" id="modalTitle"></h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
 
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="form-group">
-              <input type="hidden" id="txtIdDia">
-              <label for="txtDescripcion">Descripción:</label>
-              <input type="text" class="form-control" placeholder="Ingrese el dia de la cita" id="txtDescripcion">
-            </div>
+          <input type="hidden" id="txtIdDia" />
+          <!-- Combo dia-->
+          <div class="form-group">
+            <label for="cbo_dia">Dia:</label>
+            <select id="cbo_dia" class="custom-select">
+              
+                <option value="1">Domingo</option>
+                <option value="2">Lunes</option>
+                <option value="3">Martes</option>
+                <option value="4">Miércoles</option>
+                <option value="5">Jueves</option>
+                <option value="6">Viernes</option>
+                <option value="7">Sábado</option>
+            </select>
           </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -71,54 +77,61 @@ Dias
 
 {% block js %}
 <script>
-
   const initDatatable = () => {
     $('#tbl').DataTable({
       language: {
         url: "{{ url_for('static', filename='vendor/datatables/es-ES.json') }}",
       },
-      ajax:'/api/v1/dias',
+      ajax: '/api/v1/dias',
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id="${row.id_dia}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id_dia}">Eliminar</button>`;
           }
         }
       ]
     });
-  }
+  };
 
   const agregar = () => {
-    $('#btnAgregar').on('click', function(){
-      // Setear un título a modal
+    $('#btnAgregar').on('click', function() {
       $('#modalTitle').text("Agregar Dia");
-      // inicia ventana modal
       $('#txtIdDia').val("");
-      $('#txtDescripcion').val("");
+      $('#cbo_dia').val("Seleccione el dia");
       $('#modalFormulario').modal();
     });
-  }
+  };
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
       const idDia = $('#txtIdDia').val();
-      const nuevaDescripcion = $('#txtDescripcion').val();
+      const diaSeleccionado = $('#cbo_dia option:selected').text(); // Obtenemos el texto seleccionado
       const tabla = $('#tbl').DataTable();
 
-      if(idDia) {
-        // update
+      if (diaSeleccionado === "Seleccione el dia") {
+        Swal.fire("Error", "Debe seleccionar el dia.", "warning");
+        return;
+      }
+
+      const data = {
+        descripcion: diaSeleccionado
+      };
+
+      if (idDia) {
+        // Actualizar
         fetch(`/api/v1/dias/${idDia}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El dia ha sido actualizada correctamente.", "success");
+            Swal.fire("Actualizado", "El dia ha sido actualizado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
@@ -127,18 +140,19 @@ Dias
           Swal.fire("Error", "Ocurrió un error al actualizar el dia.", "error");
         });
       } else {
-        // insert
+        // Insertar
         fetch(`/api/v1/dias`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El dia ha sido agregada correctamente.", "success");
+            Swal.fire("Agregado", "El dia ha sido agregado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
@@ -147,28 +161,26 @@ Dias
           Swal.fire("Error", "Ocurrió un error al guardar el dia.", "error");
         });
       }
-      $('#txtDescripcion').val("");
+
+      $('#cbo_dia').val("Seleccione el dia");
       $('#modalFormulario').modal("hide");
     });
-  }
+  };
 
   const editar = () => {
-    $('#tbl').on('click', 'button[name="btn_editar"]',function(){
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_editar"]', function() {
       Swal.fire({
         title: "¿Deseas editar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
-          //Swal.fire("Saved!", "", "success");
-          $('#modalTitle').text("Editar Dia");
+          $('#modalTitle').text("Editar dia");
 
           const idDia = $(this).data('id');
           $('#txtIdDia').val(idDia);
 
-          // Necesitamos obtener la descripción del backend
           fetch(`/api/v1/dias/${idDia}`, {
             method: 'GET',
             headers: {
@@ -177,23 +189,25 @@ Dias
           })
           .then(resp => resp.json())
           .then(data => {
-            $('#txtDescripcion').val(data.data.descripcion);
+            $('#cbo_dia').val(data.data.descripcion); // Asumiendo que la descripción es el valor que necesitas
             $('#modalFormulario').modal();
+          }).catch(err => {
+            console.error(err);
+            Swal.fire("Error", "Ocurrió un error al obtener el dia.", "error");
           });
         }
       });
     });
-  }
+  };
 
   const eliminar = () => {
-    $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
+    $('#tbl').on('click', 'button[name="btn_eliminar"]', function() {
       const idDia = $(this).data('id');
-      // Mostrar mensaje de confirmación usando sweetalert
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
           fetch(`/api/v1/dias/${idDia}`, {
@@ -204,9 +218,8 @@ Dias
           })
           .then(resp => resp.json())
           .then(data => {
-            if(data && !data.error && data.success) {
-              // Para borrar la fila del datatable(cliente)
-              const fila =$(this).closest('tr');
+            if (data && !data.error && data.success) {
+              const fila = $(this).closest('tr');
               const tabla = $('#tbl').DataTable();
               tabla.row(fila).remove().draw();
               Swal.fire("Eliminado", "", data.success);
@@ -218,16 +231,15 @@ Dias
           });
         }
       });
-
     });
-  }
+  };
 
   const addEvents = () => {
     agregar();
     guardar();
     editar();
     eliminar();
-  }
+  };
 
   $(function() {
     initDatatable();
