--- a/app/rutas/referenciales/especialidad/templates/especialidad-index.html
+++ b/app/rutas/referenciales/especialidad/templates/especialidad-index.html
@@ -11,13 +11,13 @@ Especialidad
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-primary" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Especialidad</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -38,20 +38,24 @@ Especialidad
             <h4 class="modal-title" id="modalTitle"></h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
-
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="form-group">
-              <input type="hidden" id="txtIdEspecialidad">
-              <label for="txtDescripcion">Descripción:</label>
-              <input type="text" class="form-control" placeholder="Ingrese la especialidad" id="txtDescripcion">
-            </div>
-          </div>
+          <input type="hidden" id="txtIdEspecialidad" />
+          <!-- Combo especialidad-->
+          <div class="form-group">
+            <label for="cbo_especi">Especialidad:</label>
+            <select id="cbo_especi" class="custom-select">
+                <option selected>Seleccione la especialidad</option>
+                <option value="1">Psicologia de pareja y familiar</option>
+                <option value="2">Psicologia clinica y de la salud</option>
+                <option value="3">Neuropsicologia</option>
+                <option value="4">Psicologia clinica adultos</option>
+                <option value="4">Psicopedagogia</option>
+            </select>
+        </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -81,44 +85,52 @@ Especialidad
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id="${row.id_especialidad}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id_especialidad}">Eliminar</button>`;
           }
         }
       ]
     });
-  }
+  };
 
   const agregar = () => {
     $('#btnAgregar').on('click', function(){
-      // Setear un título a modal
       $('#modalTitle').text("Agregar Especialidad");
-      // inicia ventana modal
       $('#txtIdEspecialidad').val("");
-      $('#txtDescripcion').val("");
+      $('#cbo_especi').val("Seleccione la especialidad");
       $('#modalFormulario').modal();
     });
-  }
+  };
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
       const idEspecialidad = $('#txtIdEspecialidad').val();
-      const nuevaDescripcion = $('#txtDescripcion').val();
+      const especiSeleccionado = $('#cbo_especi option:selected').text(); // Obtenemos el texto seleccionado
       const tabla = $('#tbl').DataTable();
 
-      if(idEspecialidad) {
-        // update
+      if (especiSeleccionado === "Seleccione la especialidad") {
+        Swal.fire("Error", "Debe seleccionar una especialidad.", "warning");
+        return;
+      }
+
+      const data = {
+        descripcion: especiSeleccionado
+      };
+
+      if (idEspecialidad) {
+        // Actualizar
         fetch(`/api/v1/especialidades/${idEspecialidad}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "La especialidad ha sido actualizada correctamente.", "success");
+            Swal.fire("Actualizado", "La especialidad ha sido actualizado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
@@ -127,18 +139,19 @@ Especialidad
           Swal.fire("Error", "Ocurrió un error al actualizar la especialidad.", "error");
         });
       } else {
-        // insert
+        // Insertar
         fetch(`/api/v1/especialidades`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "La especialidad ha sido agregada correctamente.", "success");
+            Swal.fire("Agregado", "La especialidad ha sido agregado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
@@ -147,28 +160,27 @@ Especialidad
           Swal.fire("Error", "Ocurrió un error al guardar la especialidad.", "error");
         });
       }
-      $('#txtDescripcion').val("");
+
+      $('#cbo_especi').val("Seleccione la especialidad");
       $('#modalFormulario').modal("hide");
     });
-  }
+  };
 
   const editar = () => {
-    $('#tbl').on('click', 'button[name="btn_editar"]',function(){
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_editar"]', function() {
       Swal.fire({
         title: "¿Deseas editar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
-          //Swal.fire("Saved!", "", "success");
           $('#modalTitle').text("Editar Especialidad");
 
           const idEspecialidad = $(this).data('id');
           $('#txtIdEspecialidad').val(idEspecialidad);
 
-          // Necesitamos obtener la descripción del backend
+          // Obtener la descripción del backend
           fetch(`/api/v1/especialidades/${idEspecialidad}`, {
             method: 'GET',
             headers: {
@@ -177,23 +189,31 @@ Especialidad
           })
           .then(resp => resp.json())
           .then(data => {
-            $('#txtDescripcion').val(data.data.descripcion);
+            // Asegurarse de que el combo box tenga la opción correcta seleccionada
+            $('#cbo_especi').val("Seleccione la especialidad"); // Restablecer el combo box primero
+            $('#cbo_especi option').each(function() {
+              if ($(this).text() === data.data.descripcion) {
+                $(this).prop('selected', true);
+              }
+            });
             $('#modalFormulario').modal();
+          }).catch(err => {
+            console.error(err);
+            Swal.fire("Error", "Ocurrió un error al obtener especialidad.", "error");
           });
         }
       });
     });
-  }
+  };
 
   const eliminar = () => {
-    $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
+    $('#tbl').on('click', 'button[name="btn_eliminar"]', function() {
       const idEspecialidad = $(this).data('id');
-      // Mostrar mensaje de confirmación usando sweetalert
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
           fetch(`/api/v1/especialidades/${idEspecialidad}`, {
@@ -204,9 +224,8 @@ Especialidad
           })
           .then(resp => resp.json())
           .then(data => {
-            if(data && !data.error && data.success) {
-              // Para borrar la fila del datatable(cliente)
-              const fila =$(this).closest('tr');
+            if (data && !data.error && data.success) {
+              const fila = $(this).closest('tr');
               const tabla = $('#tbl').DataTable();
               tabla.row(fila).remove().draw();
               Swal.fire("Eliminado", "", data.success);
@@ -218,16 +237,15 @@ Especialidad
           });
         }
       });
-
     });
-  }
+  };
 
   const addEvents = () => {
     agregar();
     guardar();
     editar();
     eliminar();
-  }
+  };
 
   $(function() {
     initDatatable();
@@ -235,4 +253,3 @@ Especialidad
   });
 </script>
 {% endblock %}
-ciudades
