--- a/app/rutas/referenciales/instrumento/templates/instrumento-index.html
+++ b/app/rutas/referenciales/instrumento/templates/instrumento-index.html
@@ -1,23 +1,23 @@
 {% extends 'base.html' %}
-
+    
 {% block titulo %}
 Instrumentos
 {% endblock %}
 
 {% block contenido %}
 <div class="container mt-4">
-    <h3>Listar Instrumentos</h3>
+    <h3>Listar Instrumentos utilizados (test)</h3>
 
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-success" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Instrumentos Utilizados</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -38,20 +38,23 @@ Instrumentos
             <h4 class="modal-title" id="modalTitle"></h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
-
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="form-group">
-              <input type="hidden" id="txtIdInstrumento">
-              <label for="txtDescripcion">Descripción:</label>
-              <input type="text" class="form-control" placeholder="Ingrese algún instrumento" id="txtDescripcion">
-            </div>
-          </div>
+          <input type="hidden" id="txtIdInstru" />
+          <!-- Combo país -->
+          <div class="form-group">
+            <label for="cbo_instru">Instrumentos Utilizados:</label>
+            <select id="cbo_instru" class="custom-select">
+                <option selected>Seleccione el instrumento</option>
+                <option value="1">Tests de inteligencia</option>
+                <option value="2">Pruebas neuropsicológicas</option>
+                <option value="3">Test de Dominós </option>
+                <option value="4">Test de la Casa-Árbol-Persona</option>
+            </select>
+        </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline-success" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-outline-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -71,51 +74,60 @@ Instrumentos
 
 {% block js %}
 <script>
+
   const initDatatable = () => {
     $('#tbl').DataTable({
       language: {
         url: "{{ url_for('static', filename='vendor/datatables/es-ES.json') }}",
       },
-      ajax: '/api/v1/instrumentos',
+      ajax:'/api/v1/instrumentos',
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id="${row.id_instrumento}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id_instrumento}">Eliminar</button>`;
           }
         }
       ]
     });
-  }
+  };
 
   const agregar = () => {
     $('#btnAgregar').on('click', function(){
-      // Setear un título a modal
-      $('#modalTitle').text("Agregar un Instrumento");
-      // inicia ventana modal
-      $('#txtIdInstrumento').val("");
-      $('#txtDescripcion').val("");
+      $('#modalTitle').text("Agregar Instrumento");
+      $('#txtIdInstru').val("");
+      $('#cbo_instru').val("Seleccione el instrumento");
       $('#modalFormulario').modal();
     });
-  }
+  };
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
-      const idInstrumento = $('#txtIdInstrumento').val();
-      const nuevaDescripcion = $('#txtDescripcion').val();
+      const id_instrumento = $('#txtIdInstru').val();
+      const instruSeleccionado = $('#cbo_instru option:selected').text(); // Obtenemos el texto seleccionado
       const tabla = $('#tbl').DataTable();
 
-      if(idInstrumento) {
-        // update
-        fetch(`/api/v1/instrumentos/${idInstrumento}`, {
+      if (instruSeleccionado === "Seleccione el instrumento") {
+        Swal.fire("Error", "Debe seleccionar un instrumento.", "warning");
+        return;
+      }
+
+      const data = {
+        descripcion: instruSeleccionado
+      };
+
+      if (id_instrumento) {
+        // Actualizar
+        fetch(`/api/v1/instrumentos/${id_instrumento}`, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion })
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
             Swal.fire("Actualizado", "El instrumento ha sido actualizado correctamente.", "success");
           } else {
@@ -126,16 +138,17 @@ Instrumentos
           Swal.fire("Error", "Ocurrió un error al actualizar el instrumento.", "error");
         });
       } else {
-        // insert
+        // Insertar
         fetch(`/api/v1/instrumentos`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion })
+          },
+          body: JSON.stringify(data)
         })
         .then(resp => resp.json())
         .then(data => {
-          if(data && !data.error && data.success) {
+          if (data && !data.error && data.success) {
             tabla.ajax.reload();
             Swal.fire("Agregado", "El instrumento ha sido agregado correctamente.", "success");
           } else {
@@ -146,28 +159,28 @@ Instrumentos
           Swal.fire("Error", "Ocurrió un error al guardar el instrumento.", "error");
         });
       }
-      $('#txtDescripcion').val("");
+
+      $('#cbo_instru').val("Seleccione el instrumento");
       $('#modalFormulario').modal("hide");
     });
-  }
+  };
 
   const editar = () => {
-    $('#tbl').on('click', 'button[name="btn_editar"]', function(){
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_editar"]', function() {
       Swal.fire({
         title: "¿Deseas editar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
-          $('#modalTitle').text("Editar un Instrumento");
+          $('#modalTitle').text("Editar instrumento");
 
-          const idInstrumento = $(this).data('id');
-          $('#txtIdInstrumento').val(idInstrumento);
+          const id_instrumento = $(this).data('id');
+          $('#txtIdInstru').val(id_instrumento);
 
           // Obtener la descripción del backend
-          fetch(`/api/v1/instrumentos/${idInstrumento}`, {
+          fetch(`/api/v1/instrumentos/${id_instrumento}`, {
             method: 'GET',
             headers: {
               'Content-Type': 'application/json'
@@ -175,26 +188,34 @@ Instrumentos
           })
           .then(resp => resp.json())
           .then(data => {
-            $('#txtDescripcion').val(data.data.descripcion);
+            // Asegurarse de que el combo box tenga la opción correcta seleccionada
+            $('#cbo_instru').val("Seleccione el instrumento"); // Restablecer el combo box primero
+            $('#cbo_instru option').each(function() {
+              if ($(this).text() === data.data.descripcion) {
+                $(this).prop('selected', true);
+              }
+            });
             $('#modalFormulario').modal();
+          }).catch(err => {
+            console.error(err);
+            Swal.fire("Error", "Ocurrió un error al obtener el Instrumento.", "error");
           });
         }
       });
     });
-  }
+  };
 
   const eliminar = () => {
-    $('#tbl').on('click', 'button[name="btn_eliminar"]', function(){
-      const idInstrumento = $(this).data('id');
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_eliminar"]', function() {
+      const id_instrumento = $(this).data('id');
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
         showCancelButton: true,
-        confirmButtonText: "Si",
-        cancelButtonText: `No`
+        confirmButtonText: "Sí",
+        cancelButtonText: "No"
       }).then((result) => {
         if (result.isConfirmed) {
-          fetch(`/api/v1/instrumentos/${idInstrumento}`, {
+          fetch(`/api/v1/instrumentos/${id_instrumento}`, {
             method: 'DELETE',
             headers: {
               'Content-Type': 'application/json'
@@ -202,8 +223,7 @@ Instrumentos
           })
           .then(resp => resp.json())
           .then(data => {
-            if(data && !data.error && data.success) {
-              // Para borrar la fila del datatable(cliente)
+            if (data && !data.error && data.success) {
               const fila = $(this).closest('tr');
               const tabla = $('#tbl').DataTable();
               tabla.row(fila).remove().draw();
@@ -217,14 +237,14 @@ Instrumentos
         }
       });
     });
-  }
+  };
 
   const addEvents = () => {
     agregar();
     guardar();
     editar();
     eliminar();
-  }
+  };
 
   $(function() {
     initDatatable();
