--- a/app/rutas/referenciales/paises/templates/pais-index.html
+++ b/app/rutas/referenciales/paises/templates/pais-index.html
@@ -11,13 +11,13 @@ Paises
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-success" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Paises</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -43,15 +43,15 @@ Paises
           <div class="modal-body">
             <div class="form-group">
               <input type="hidden" id="txtIdPais">
-              <label for="txtDescripcion">Descripción:</label>
+              <label for="txtDescripcion">Pais:</label>
               <input type="text" class="form-control" placeholder="Ingrese algun pais" id="txtDescripcion">
             </div>
           </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -71,90 +71,84 @@ Paises
 
 {% block js %}
 <script>
-
   const initDatatable = () => {
     $('#tbl').DataTable({
       language: {
         url: "{{ url_for('static', filename='vendor/datatables/es-ES.json') }}",
       },
-      ajax:'/api/v1/paises',
+      ajax: '/api/v1/paises',
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-success" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-primary" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id_pais="${row.id_pais}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id_pais="${row.id_pais}">Eliminar</button>`;
           }
         }
       ]
     });
-  }
+  };
 
   const agregar = () => {
     $('#btnAgregar').on('click', function(){
-      // Setear un título a modal
-      $('#modalTitle').text("Agregar un Pais");
-      // inicia ventana modal
+      $('#modalTitle').text("Agregar un País");
       $('#txtIdPais').val("");
       $('#txtDescripcion').val("");
       $('#modalFormulario').modal();
     });
-  }
+  };
 
   const guardar = () => {
     $('#btnGuardar').on('click', function() {
-      const idPais = $('#txtIdPais').val();
+      const id_pais = $('#txtIdPais').val();
       const nuevaDescripcion = $('#txtDescripcion').val();
       const tabla = $('#tbl').DataTable();
 
-      if(idPais) {
-        // update
-        fetch(`/api/v1/paises/${idPais}`, {
+      if(id_pais) {
+        // Actualización
+        fetch(`/api/v1/paises/${id_pais}`, {
           method: 'PUT',
-          headers: {
-            'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ descripcion: nuevaDescripcion })
         })
         .then(resp => resp.json())
         .then(data => {
           if(data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El pais ha sido actualizada correctamente.", "success");
+            Swal.fire("Actualizado", "El país ha sido actualizado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
         }).catch(err => {
           console.error(err);
-          Swal.fire("Error", "Ocurrió un error al actualizar el pais.", "error");
+          Swal.fire("Error", "Ocurrió un error al actualizar el país.", "error");
         });
       } else {
-        // insert
+        // Inserción
         fetch(`/api/v1/paises`, {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          }, body: JSON.stringify({ descripcion: nuevaDescripcion})
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ descripcion: nuevaDescripcion })
         })
         .then(resp => resp.json())
         .then(data => {
           if(data && !data.error && data.success) {
             tabla.ajax.reload();
-            Swal.fire("Actualizado", "El pais ha sido agregada correctamente.", "success");
+            Swal.fire("Agregado", "El país ha sido agregado correctamente.", "success");
           } else {
             Swal.fire(data.error);
           }
         }).catch(err => {
           console.error(err);
-          Swal.fire("Error", "Ocurrió un error al guardar el pais.", "error");
+          Swal.fire("Error", "Ocurrió un error al guardar el país.", "error");
         });
       }
       $('#txtDescripcion').val("");
       $('#modalFormulario').modal("hide");
     });
-  }
+  };
 
   const editar = () => {
-    $('#tbl').on('click', 'button[name="btn_editar"]',function(){
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_editar"]', function() {
       Swal.fire({
         title: "¿Deseas editar este registro?",
         showCancelButton: true,
@@ -162,18 +156,15 @@ Paises
         cancelButtonText: `No`
       }).then((result) => {
         if (result.isConfirmed) {
-          //Swal.fire("Saved!", "", "success");
-          $('#modalTitle').text("Editar un Pais");
+          $('#modalTitle').text("Editar un País");
 
-          const idPais = $(this).data('id');
-          $('#txtIdPais').val(idPais);
+          const id_pais = $(this).data('id_pais');
+          $('#txtIdPais').val(id_pais);
 
-          // Necesitamos obtener la descripción del backend
-          fetch(`/api/v1/paises/${idPais}`, {
+          // Obtener la descripción del backend
+          fetch(`/api/v1/paises/${id_pais}`, {
             method: 'GET',
-            headers: {
-              'Content-Type': 'application/json'
-            }
+            headers: { 'Content-Type': 'application/json' }
           })
           .then(resp => resp.json())
           .then(data => {
@@ -183,12 +174,11 @@ Paises
         }
       });
     });
-  }
+  };
 
   const eliminar = () => {
-    $('#tbl').on('click', 'button[name="btn_eliminar"]',function(){
-      const idPais = $(this).data('id');
-      // Mostrar mensaje de confirmación usando sweetalert
+    $('#tbl').on('click', 'button[name="btn_eliminar"]', function() {
+      const id_pais = $(this).data('id_pais');
       Swal.fire({
         title: "¿Deseas eliminar este registro?",
         showCancelButton: true,
@@ -196,42 +186,39 @@ Paises
         cancelButtonText: `No`
       }).then((result) => {
         if (result.isConfirmed) {
-          fetch(`/api/v1/paises/${idPais}`, {
+          fetch(`/api/v1/paises/${id_pais}`, {
             method: 'DELETE',
-            headers: {
-              'Content-Type': 'application/json'
-            }
+            headers: { 'Content-Type': 'application/json' }
           })
           .then(resp => resp.json())
           .then(data => {
             if(data && !data.error && data.success) {
-              // Para borrar la fila del datatable(cliente)
-              const fila =$(this).closest('tr');
+              const fila = $(this).closest('tr');
               const tabla = $('#tbl').DataTable();
               tabla.row(fila).remove().draw();
-              Swal.fire("Eliminado", "", data.success);
+              Swal.fire("Eliminado", "El país ha sido eliminado correctamente.", "success");
             } else {
               Swal.fire(data.error);
             }
           }).catch(err => {
-            Swal.fire("Error", "Ocurrió un error al eliminar el pais.", "error");
+            Swal.fire("Error", "Ocurrió un error al eliminar el país.", "error");
           });
         }
       });
-
     });
-  }
+  };
 
   const addEvents = () => {
     agregar();
     guardar();
     editar();
     eliminar();
-  }
+  };
 
   $(function() {
     initDatatable();
     addEvents();
   });
 </script>
+
 {% endblock %}
