--- a/app/rutas/referenciales/turno/templates/turno-index.html
+++ b/app/rutas/referenciales/turno/templates/turno-index.html
@@ -11,13 +11,13 @@ Turnos
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-outline-success" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-info" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
           <thead>
             <tr>
-              <th>Descripción</th>
+              <th>Turnos</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -42,28 +42,20 @@ Turnos
           <div class="modal-body">
             <div class="form-group">
               <input type="hidden" id="txtIdTurno">
-              <label for="txtDescripcion">Descripción:</label>
+              <label for="txtDescripcion">Turno:</label>
               <input type="text" class="form-control" placeholder="Ingrese el turno" id="txtDescripcion">
             </div>
           </div>
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline-success" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-outline-warning" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
       </div>
     </div>
-
-
-
-
-    
-
-
-
 
     <div class="row mt-4 d-none" id="rowAlerta">
         <div class="col col-md-12">
@@ -74,18 +66,6 @@ Turnos
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 {% endblock %}
 
 {% block js %}
@@ -100,8 +80,8 @@ Turnos
       columns: [
         { data: 'descripcion' },
         { data: function(row) {
-            return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
+            return `<button type="button" name="btn_editar" class="btn btn-info" data-id="${row.id_turno}">Editar</button>
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id_turno}">Eliminar</button>`
           }
         }
       ]
