feat:Actualizacion#paciente#login#index#cita

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('index.indexIndex') }}">
+                <a class="nav-link" href="{{ url_for('vista.vistaIndex') }}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Inicio</span></a>
             </li>
@@ -126,6 +126,8 @@
                 data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                 <a class="collapse-item" href="{{ url_for('pdcmod.pedidos_index') }}">Registrar pedido de compras</a>
+                <a class="collapse-item" href="{{ url_for('vistaAGENDAR.vistaAGENDARIndex') }}">Agenda Médica</a>
+                    <a class="collapse-item" href="{{ url_for('cita.citaIndex') }}">Gestionar Citas</a>
                     
                 </div>
             </div>
