--- a/app/rutas/login/templates/login-index.html
+++ b/app/rutas/login/templates/login-index.html
@@ -1,113 +1,192 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <title>Iniciar Sesión</title>
+    
+    <!-- Enlace a Google Fonts para una fuente moderna -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    
+    <!-- Estilos con el verde de Bootstrap success -->
     <style>
-        body {
-            font-family: Arial, sans-serif; 
-            background: linear-gradient(135deg, #1c79c4, #338783, #2082d3, #38918d);  /* Color de fondo de la página */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
         }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 100vh;
+            background-color: #f4f6f9;
+        }
+
         .login-container {
-            background: linear-gradient(135deg, #38B2AC, #4299E1);  /* Degradado de colores turquesa y azul */
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);  /* Sombra */
-            width: 320px;
-            text-align: left;
-        }
-        
-        .login-container h2 {
-            text-align: center;
-            margin-bottom: 30px;
+            max-width: 800px;
+            display: flex;
+            background-color: white;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+            height: 600px;
+            margin: auto;
         }
 
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 95%;
-            padding: 8px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 8px;
+        .login-form, .login-welcome {
+            flex: 1;
+            padding: 40px;
         }
 
-        .login-container input[type="submit"] {
+        .login-welcome {
+            background-color: #007d55;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            border-radius: 0 20px 20px 0;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 14px;
+            color: #555;
+        }
+
+        .form-group input {
             width: 100%;
             padding: 10px;
-            background-color: #0d5486;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+
+        .btn {
+            width: 100%;
+            padding: 12px;
+            background-color: #007d55;
             color: white;
             border: none;
-            border-radius: 7px;
+            border-radius: 5px;
+            font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
-        .login-container input[type="submit"]:hover {
-            background-color: #0c3756;
+        .btn:hover {
+            background-color: #005f43;
         }
 
-        .login-container .message {
+        .extra-links {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+
+        .extra-links a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .extra-links a:hover {
+            text-decoration: underline;
+        }
+
+        .login-welcome h3 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .login-welcome p {
+            font-size: 16px;
+        }
+
+        footer {
+            background-color: white;
+            padding: 10px 0;
             text-align: center;
-            margin-top: 10px;
+            width: 100%;
+            border-top: 1px solid #eaeaea;
+        }
+
+        footer span {
+            color: #555;
         }
     </style>
 </head>
 <body>
+
     <div class="login-container">
-        <h2>Iniciar Sesión</h2>
+        <div class="login-form">
+            <h2>Iniciar Sesión</h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <form action="{{ url_for('login.login') }}" method="POST" onsubmit="return validarCredenciales();">
+                <div class="form-group">
+                    <label for="username">Usuario:</label>
+                    <input type="text" id="username" name="username" placeholder="Ingresa tu usuario" required>
+                </div>
 
-        <form action="{{ url_for('login.login') }}"  method="POST"  onsubmit="return validarCredenciales();">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" placeholder="Ingresa tu usuario" required>
+                <div class="form-group">
+                    <label for="password">Contraseña:</label>
+                    <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+                </div>
 
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+                <button type="submit" class="btn">Iniciar Sesión</button>
+            </form>
 
-            <input type="submit" value="Iniciar Sesión">
-        </form>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+            <div class="extra-links">
+                <a href="registro.html">¿No tienes cuenta? Regístrate aquí</a>
+            </div>
+        </div>
 
-        <script>
-            function validarCredenciales() {
-                // Definir usuario y contraseña correctos
-                const usuarioCorrecto = "KEILA";
-                const contrasenaCorrecta = "12345678";
-
-                // Obtener valores ingresados
-                const username = document.getElementById("username").value;
-                const password = document.getElementById("password").value;
-
-                // Validar credenciales
-                if (username === usuarioCorrecto && password === contrasenaCorrecta) { 
-                    // Redirigir a otra página si es necesario
-                    window.location.href = "{{ url_for('vista.vistaIndex') }}";
-                } else {
-                    alert("Usuario o contraseña incorrectos.");
-                }
-
-                return false; // Evita el envío del formulario
-            }
-        </script>
+        <div class="login-welcome">
+            <h3>¡Bienvenido de nuevo!</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
     </div>
-</body>
-</html>
-    
-    <!-- <script>
-        function redirectToPage() {
-            // Aquí puedes poner la URL a la que deseas redirigir
-            window.location.href = "{{ url_for('vista.vistaIndex') }}"; // Reemplaza 'nueva_pagina' por la ruta deseada
-            return false; // Evita el envío del formulario
-        }
-    </script> -->
- </div>
 
+    <!-- Footer -->
+    <footer>
+        <br>
+        <br>
+        <span>Copyright &copy; manurxk</span>
+        <br>
+        <br>
+        
+    </footer>
+
+    <!-- Scripts -->
+    <script>
+        function validarCredenciales() {
+            const usuarioCorrecto = "6814403";
+            const contrasenaCorrecta = "1873";
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            if (username === usuarioCorrecto && password === contrasenaCorrecta) {
+                window.location.href = "{{ url_for('vista.vistaIndex') }}";
+            } else {
+                alert("Usuario o contraseña incorrectos.");
+            }
+
+            return false;
+        }
+    </script>
 </body>
 </html>
